# test-install

./: .gitignore  MANIFEST.in  build_backend.py  pyproject.toml  setup.py
.github/workflows/: build.yml
dynawo/: algorithms_launcher.py  dynaflow_launcher.py  dynawo_launcher.py
