[build-system]
requires = ["setuptools>=61.0", "wheel", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "dynawo"
version = "0.0.1"
description = "Python wrapper for Dynawo native binaries"
readme = "README.md"
authors = [{ name = "Gautier Bureau", email = "gautier.bureau@rte-france.com" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
dynawo = "dynawo.dynawo_launcher:main"
dynaflow-launcher = "dynawo.dynaflow_launcher:main"
dynawo-algorithms = "dynawo.algorithms_launcher:main"

[tool.setuptools]
packages = ["dynawo"]
